[package]
name = "ope-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
sha2 = { version = "0.10.2", default-features = false }
ctr = "0.9.2"
aes = "0.8"

num-traits = {version = "0.2", default-features = false, features = ["libm"]}
num-bigint = {version = "0.4", default-features= false }