[package]
name = "ope-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jörn Heinemann <joernheinemann@gmx.de>"]
repository = "https://github.com/sentclose/ope"
description = "This is an Order-preserving encryption (OPE) lib inspired by cryptdb's ope implementation."
license-file = "LICENSE"

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*",
]

[dependencies]
hmac = "0.12.1"
sha2 = { version = "0.10.2", default-features = false }
ctr = "0.9.2"
aes = "0.8"

num-traits = {version = "0.2", default-features = false, features = ["libm"]}
num-bigint = {version = "0.4", default-features= false }